// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/atoms 日付 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1"
>
  10月10日
</p>
`;

exports[`Storyshots components/atoms/タスク タスク無し 1`] = `
<ul
  className="MuiList-root"
>
  <li
    className="MuiListItem-root MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
      >
        タスクがありません。
      </span>
    </div>
  </li>
</ul>
`;

exports[`Storyshots components/atoms/タスク 短縮タスク 1`] = `
<ul
  className="MuiList-root"
>
  <ul>
    <li>
      短縮タスク短縮タ……
    </li>
  </ul>
  <ul>
    <li>
      短縮タスク短縮タ……
    </li>
  </ul>
</ul>
`;

exports[`Storyshots components/atoms/タスク 通常タスク 1`] = `
<ul
  className="MuiList-root"
>
  <ul>
    <li>
      タスクタスクタスクタスク
    </li>
  </ul>
  <ul>
    <li>
      タスクタスクタスクタスク
    </li>
  </ul>
</ul>
`;

exports[`Storyshots components/molecules/日付カード タスク込み 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root MuiPaper-rounded"
  onClick={[Function]}
>
  <div
    className="MuiCardContent-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1"
    >
      10月10日
    </p>
    <ul
      className="MuiList-root"
    >
      <ul>
        <li>
          短縮タスク短縮タ……
        </li>
      </ul>
      <ul>
        <li>
          短縮タスク短縮タ……
        </li>
      </ul>
    </ul>
  </div>
</div>
`;

exports[`Storyshots components/molecules/日付カード 日付込み 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root MuiPaper-rounded"
  onClick={[Function]}
>
  <div
    className="MuiCardContent-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1"
    >
      10月10日
    </p>
    <ul
      className="MuiList-root"
    >
      <li
        className="MuiListItem-root MuiListItem-gutters"
        disabled={false}
      >
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
          >
            タスクがありません。
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots components/molecules/日付カード 空欄 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root MuiPaper-rounded"
  onClick={[Function]}
>
  <div
    className="MuiCardContent-root"
  />
</div>
`;

exports[`Storyshots material-ui/sample/button simple blue button 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    サンプル
  </span>
</button>
`;
